@@ -1,3 +1,6 @@
+2009-08-09 Alex 
+    Added possibility to specify desired donor. Version 0.11.0
+
 2009-08-06 Alex 
     Refactored interface. Now connection URL is supplied to gcs_open() and
     not gcs_create(). It is done to satisfy wsrep API changes and is generally
