@@ -1,3 +1,7 @@
+2009-08-09 Alex 
+    Changes to match new wsrep API: added donor name parameter to
+    mm_galera_connect(). Version 0.4.0.
+    
 2009-08-06 Alex 
     Changes to match new wsrep API: cluster connection url is now passed to
     mm_galera_connect() instead of mm_galera_init(). Brought library interface
